2007-03-23  J. Tang  <jtang@tresys.com>

	* added apol_mls_level_get_sens() and apol_mls_level_get_cats().

2007-03-23  J. Mowery <jmowery@tresys.com>

	* Libseaudit SWIG wrapper added; wrapper treats all structures as
	  classes in the target language.

2007-03-23  J. Tang  <jtang@tresys.com>

	* apol_mls_level_t and apol_mls_range_t are now opaque structures.

	* fixed error in seaudit_model_create_from_model(), where the
	duplicate's filters and sorts were being linked to the original
	model, not the newly created one.

	* fixed potential segfault in seaudit_filter_set_name() and
	seaudit_filter_set_description() if the passed in pointer was the
	same one obtained by the respecitve accessor function.

2007-03-22  J. Mowery  <jmowery@tresys.com>

	* Libapol SWIG wrapper updated to treat all structures as classes
	  in the target language.

2007-03-21  J. Tang  <jtang@tresys.com>

	* Added ability for user to specify type joins and splits in
	sediffx.  The libpoldiff library had always supported this
	feature; it just was not available through the user interface.

2007-03-20  J. Mowery  <jmowery@tresys.com>

	* Renamed apol_domain_trans_table_destroy to domain_trans_table_destroy
	  and moved to policy-query-internal.h; this function was not intended
	  for external use.

2007-03-19  J. Tang  <jtang@tresys.com>

	* When viewing AV rule differences, click (either left or right) a
	permission name.  This will now popup a menu that gives line
	numbers for rules that contributed just that permission, rather
	than the entire AV rule.  This is enabled when source policies are
	used.

2007-03-16  J. Tang  <jtang@tresys.com>

	* Added poldiff_avrule_get_orig_line_numbers_for_perm() and
	poldiff_avrule_get_mod_line_numbers_for_perm().

2007-03-15  J. Tang  <jtang@tresys.com>

	* Split libpoldiff/include/rule_diff.h into
	libpoldiff/include/avrule_diff.h and
	libpoldiff/include/terule_diff.h.  None of the function names were
	changed.
