@@ -34,11 +34,7 @@ extern "C"
 #include "mls-query.h"
 #include <qpol/policy.h>
 
-	typedef struct apol_context
-	{
-		char *user, *role, *type;
-		apol_mls_range_t *range;
-	} apol_context_t;
+	typedef struct apol_context apol_context_t;
 
 /**
  * Allocate and return a new context structure.	 All fields are
@@ -121,6 +117,46 @@ extern "C"
 	extern int apol_context_set_range(apol_policy_t * p, apol_context_t * context, apol_mls_range_t * range);
 
 /**
+ * Get the user field of a context structure.
+ *
+ * @param context Context to query.
+ *
+ * @return Context's user, or NULL if not set or upon error.  Do not
+ * modify this string.
+ */
+	extern const char *apol_context_get_user(const apol_context_t * context);
+
+/**
+ * Get the role field of a context structure.
+ *
+ * @param context Context to query.
+ *
+ * @return Context's role, or NULL if not set or upon error.  Do not
+ * modify this string.
+ */
+	extern const char *apol_context_get_role(const apol_context_t * context);
+
+/**
+ * Get the type field of a context structure.
+ *
+ * @param context Context to query.
+ *
+ * @return Context's type, or NULL if not set or upon error.  Do not
+ * modify this string.
+ */
+	extern const char *apol_context_get_type(const apol_context_t * context);
+
+/**
+ * Get the range field of a context structure.
+ *
+ * @param context Context to query.
+ *
+ * @return Context's range, or NULL if not set or upon error.  Do not
+ * modify this structure.
+ */
+	extern const apol_mls_range_t *apol_context_get_range(const apol_context_t * context);
+
+/**
  * Compare two contexts, determining if one matches the other.	The
  * search context may have empty elements that indicate not to compare
  * that field.	Types will be matched if the two or any of their
@@ -139,7 +175,8 @@ extern "C"
  * @return 1 If comparison succeeds, 0 if not; -1 on error.
  */
 	extern int apol_context_compare(apol_policy_t * p,
-					apol_context_t * target, apol_context_t * search, unsigned int range_compare_type);
+					const apol_context_t * target, const apol_context_t * search,
+					unsigned int range_compare_type);
 
 /**
  * Given a complete context (user, role, type, and range if policy is
@@ -171,9 +208,10 @@ extern "C"
 	extern int apol_context_validate_partial(apol_policy_t * p, apol_context_t * context);
 
 /**
- * Given a complete context (user, role, type, and range if policy is
- * MLS), allocate and return a string that represents that context.
- * This function does not check if the context is valid or not.
+ * Given a context, allocate and return a string that represents the
+ * context.  This function does not check if the context is valid or
+ * not.  For fields that have not been set, leave that part of the
+ * string empty.
  *
  * @param p Policy within which to look up context information.
  * @param context Context to render.
